// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AlertElement /> should have icons 1`] = `
<DocumentFragment>
  .c3 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 1px;
}

.c0 {
  font-size: 1rem;
}

.c0 .src-alert-content {
  padding: .75rem 1.25rem;
  padding-left: 0.625rem;
  padding-right: 0.625rem;
}

.c1 {
  border: solid 1px;
  border-radius: .25rem;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: inherit;
  word-break: break-word;
  word-wrap: break-word;
  background: #0665d0;
  border-color: #0552A9;
  color: #fff;
}

.c1 undefined .src-alert-content > header,
.c1 undefined .src-alert-content > h1,
.c1 undefined .src-alert-content > h2,
.c1 undefined .src-alert-content > h3,
.c1 undefined .src-alert-content > h4,
.c1 undefined .src-alert-content > h5,
.c1 undefined .src-alert-content > h6,
.c1 undefined .src-alert-content > p,
.c1 undefined .src-alert-content > hr {
  margin-bottom: 1rem;
  margin-top: 0;
}

.c1 undefined .src-alert-content > header:last-child,
.c1 undefined .src-alert-content > h1:last-child,
.c1 undefined .src-alert-content > h2:last-child,
.c1 undefined .src-alert-content > h3:last-child,
.c1 undefined .src-alert-content > h4:last-child,
.c1 undefined .src-alert-content > h5:last-child,
.c1 undefined .src-alert-content > h6:last-child,
.c1 undefined .src-alert-content > p:last-child,
.c1 undefined .src-alert-content > hr:last-child {
  margin-bottom: 0;
}

.c1 a {
  color: inherit;
  font-weight: 500;
}

.c1 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 hr {
  background: #0552A9;
  border: 0;
  height: 1px;
  width: 100%;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #fff;
}

<div
    class="c0 c1"
    shape="rectangle"
  >
    <div
      class=" c2"
    >
      <svg />
    </div>
    <div
      class="c3 src-alert-content"
    >
      Content
    </div>
    <div
      class=" c2"
    >
      <svg />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<AlertElement /> should render component 1`] = `
<DocumentFragment>
  .c2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 1px;
}

.c0 {
  font-size: 1rem;
}

.c0 .src-alert-content {
  padding: .75rem 1.25rem;
}

.c1 {
  border: solid 1px;
  border-radius: .25rem;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: inherit;
  word-break: break-word;
  word-wrap: break-word;
  background: #0665d0;
  border-color: #0552A9;
  color: #fff;
}

.c1 undefined .src-alert-content > header,
.c1 undefined .src-alert-content > h1,
.c1 undefined .src-alert-content > h2,
.c1 undefined .src-alert-content > h3,
.c1 undefined .src-alert-content > h4,
.c1 undefined .src-alert-content > h5,
.c1 undefined .src-alert-content > h6,
.c1 undefined .src-alert-content > p,
.c1 undefined .src-alert-content > hr {
  margin-bottom: 1rem;
  margin-top: 0;
}

.c1 undefined .src-alert-content > header:last-child,
.c1 undefined .src-alert-content > h1:last-child,
.c1 undefined .src-alert-content > h2:last-child,
.c1 undefined .src-alert-content > h3:last-child,
.c1 undefined .src-alert-content > h4:last-child,
.c1 undefined .src-alert-content > h5:last-child,
.c1 undefined .src-alert-content > h6:last-child,
.c1 undefined .src-alert-content > p:last-child,
.c1 undefined .src-alert-content > hr:last-child {
  margin-bottom: 0;
}

.c1 a {
  color: inherit;
  font-weight: 500;
}

.c1 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 hr {
  background: #0552A9;
  border: 0;
  height: 1px;
  width: 100%;
}

<div
    class="c0 c1"
    shape="rectangle"
  >
    <div
      class="c2 src-alert-content"
    />
  </div>
</DocumentFragment>
`;

exports[`<AlertElement /> should render component outline 1`] = `
<DocumentFragment>
  .c2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 1px;
}

.c0 {
  font-size: 1rem;
}

.c0 .src-alert-content {
  padding: .75rem 1.25rem;
}

.c1 {
  border: solid 1px;
  border-radius: .25rem;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: inherit;
  word-break: break-word;
  word-wrap: break-word;
  border-color: #0665d0;
  color: #0665d0;
}

.c1 undefined .src-alert-content > header,
.c1 undefined .src-alert-content > h1,
.c1 undefined .src-alert-content > h2,
.c1 undefined .src-alert-content > h3,
.c1 undefined .src-alert-content > h4,
.c1 undefined .src-alert-content > h5,
.c1 undefined .src-alert-content > h6,
.c1 undefined .src-alert-content > p,
.c1 undefined .src-alert-content > hr {
  margin-bottom: 1rem;
  margin-top: 0;
}

.c1 undefined .src-alert-content > header:last-child,
.c1 undefined .src-alert-content > h1:last-child,
.c1 undefined .src-alert-content > h2:last-child,
.c1 undefined .src-alert-content > h3:last-child,
.c1 undefined .src-alert-content > h4:last-child,
.c1 undefined .src-alert-content > h5:last-child,
.c1 undefined .src-alert-content > h6:last-child,
.c1 undefined .src-alert-content > p:last-child,
.c1 undefined .src-alert-content > hr:last-child {
  margin-bottom: 0;
}

.c1 a {
  color: inherit;
  font-weight: 500;
}

.c1 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 hr {
  background: #0552A9;
  border: 0;
  height: 1px;
  width: 100%;
}

<div
    class="c0 c1"
    shape="rectangle"
  >
    <div
      class="c2 src-alert-content"
    />
  </div>
</DocumentFragment>
`;

exports[`<AlertElement /> should render component outline with soft colors 1`] = `
<DocumentFragment>
  .c2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 1px;
}

.c0 {
  font-size: 1rem;
}

.c0 .src-alert-content {
  padding: .75rem 1.25rem;
}

.c1 {
  border: solid 1px;
  border-radius: .25rem;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: inherit;
  word-break: break-word;
  word-wrap: break-word;
  font-weight: 500;
  border-color: #cde0f5;
  color: #cde0f5;
}

.c1 undefined .src-alert-content > header,
.c1 undefined .src-alert-content > h1,
.c1 undefined .src-alert-content > h2,
.c1 undefined .src-alert-content > h3,
.c1 undefined .src-alert-content > h4,
.c1 undefined .src-alert-content > h5,
.c1 undefined .src-alert-content > h6,
.c1 undefined .src-alert-content > p,
.c1 undefined .src-alert-content > hr {
  margin-bottom: 1rem;
  margin-top: 0;
}

.c1 undefined .src-alert-content > header:last-child,
.c1 undefined .src-alert-content > h1:last-child,
.c1 undefined .src-alert-content > h2:last-child,
.c1 undefined .src-alert-content > h3:last-child,
.c1 undefined .src-alert-content > h4:last-child,
.c1 undefined .src-alert-content > h5:last-child,
.c1 undefined .src-alert-content > h6:last-child,
.c1 undefined .src-alert-content > p:last-child,
.c1 undefined .src-alert-content > hr:last-child {
  margin-bottom: 0;
}

.c1 a {
  color: inherit;
  font-weight: 600;
}

.c1 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 hr {
  background: #8eb9e9;
  border: 0;
  height: 1px;
  width: 100%;
}

<div
    class="c0 c1"
    shape="rectangle"
  >
    <div
      class="c2 src-alert-content"
    />
  </div>
</DocumentFragment>
`;

exports[`<AlertElement /> should render component with soft colors 1`] = `
<DocumentFragment>
  .c2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 1px;
}

.c0 {
  font-size: 1rem;
}

.c0 .src-alert-content {
  padding: .75rem 1.25rem;
}

.c1 {
  border: solid 1px;
  border-radius: .25rem;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: inherit;
  word-break: break-word;
  word-wrap: break-word;
  font-weight: 500;
  background: #cde0f5;
  border-color: #8eb9e9;
  color: #033c7c;
}

.c1 undefined .src-alert-content > header,
.c1 undefined .src-alert-content > h1,
.c1 undefined .src-alert-content > h2,
.c1 undefined .src-alert-content > h3,
.c1 undefined .src-alert-content > h4,
.c1 undefined .src-alert-content > h5,
.c1 undefined .src-alert-content > h6,
.c1 undefined .src-alert-content > p,
.c1 undefined .src-alert-content > hr {
  margin-bottom: 1rem;
  margin-top: 0;
}

.c1 undefined .src-alert-content > header:last-child,
.c1 undefined .src-alert-content > h1:last-child,
.c1 undefined .src-alert-content > h2:last-child,
.c1 undefined .src-alert-content > h3:last-child,
.c1 undefined .src-alert-content > h4:last-child,
.c1 undefined .src-alert-content > h5:last-child,
.c1 undefined .src-alert-content > h6:last-child,
.c1 undefined .src-alert-content > p:last-child,
.c1 undefined .src-alert-content > hr:last-child {
  margin-bottom: 0;
}

.c1 a {
  color: inherit;
  font-weight: 600;
}

.c1 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 hr {
  background: #8eb9e9;
  border: 0;
  height: 1px;
  width: 100%;
}

<div
    class="c0 c1"
    shape="rectangle"
  >
    <div
      class="c2 src-alert-content"
    />
  </div>
</DocumentFragment>
`;

exports[`<AlertElement /> should resize component responsively 1`] = `
<DocumentFragment>
  .c2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 1px;
}

.c0 {
  font-size: .875rem;
}

.c0 .src-alert-content {
  padding: .375rem 1.25rem;
}

.c1 {
  border: solid 1px;
  border-radius: .25rem;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: inherit;
  word-break: break-word;
  word-wrap: break-word;
  background: #0665d0;
  border-color: #0552A9;
  color: #fff;
}

.c1 undefined .src-alert-content > header,
.c1 undefined .src-alert-content > h1,
.c1 undefined .src-alert-content > h2,
.c1 undefined .src-alert-content > h3,
.c1 undefined .src-alert-content > h4,
.c1 undefined .src-alert-content > h5,
.c1 undefined .src-alert-content > h6,
.c1 undefined .src-alert-content > p,
.c1 undefined .src-alert-content > hr {
  margin-bottom: 1rem;
  margin-top: 0;
}

.c1 undefined .src-alert-content > header:last-child,
.c1 undefined .src-alert-content > h1:last-child,
.c1 undefined .src-alert-content > h2:last-child,
.c1 undefined .src-alert-content > h3:last-child,
.c1 undefined .src-alert-content > h4:last-child,
.c1 undefined .src-alert-content > h5:last-child,
.c1 undefined .src-alert-content > h6:last-child,
.c1 undefined .src-alert-content > p:last-child,
.c1 undefined .src-alert-content > hr:last-child {
  margin-bottom: 0;
}

.c1 a {
  color: inherit;
  font-weight: 500;
}

.c1 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 hr {
  background: #0552A9;
  border: 0;
  height: 1px;
  width: 100%;
}

@media (min-width:768px) {
  .c0 {
    font-size: 1rem;
  }

  .c0 .src-alert-content {
    padding: .75rem 1.25rem;
  }
}

@media (min-width:992px) {
  .c0 {
    font-size: 1rem;
  }

  .c0 .src-alert-content {
    padding: 1rem 1.25rem;
  }
}

<div
    class="c0 c1"
    shape="rectangle"
  >
    <div
      class="c2 src-alert-content"
    />
  </div>
</DocumentFragment>
`;
